# mirai-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mirai-cppConfig.cmake.in
.github/workflows/: Build.yml  c-cpp.yml
UnitTest/: CMakeLists.txt  main.cpp
doc/: Documentation.md  使用说明.md
examples/: BotEvents.cpp  CMakeLists.txt  Command.cpp  CompareMessage.cpp  FetchEventsViaHTTP.cpp  FetchEventsViahHTTP.cpp  FileMessage.cpp  GetFriendList.cpp  GetGroupList.cpp  GetProfile.cpp  GroupAnnouncement.cpp  GroupConfig.cpp  GroupFile.cpp  GroupMemberInfo.cpp  GroupNameChange.cpp  ImageMessage.cpp  MemberCardChange.cpp  MemberJoinEvent.cpp  MemberLeaveEvent.cpp  MessageType.cpp  Mute.cpp  NewFriendEvent.cpp  NudgeEvent.cpp  Recall.cpp  RecallEvent.cpp  RepeatMessage.cpp  RichMessage.cpp  SendImageMessage.cpp  VoiceMessage.cpp  sendFriendMessage.cpp
include/: CURLWrapper.h  FriendMessage.h  GroupMessage.h  defs.hpp  event_func.hpp  exported.h  message_chain.hpp  mirai.h  mirai.hpp  mirai_bot.hpp  serializable.hpp  typedef.hpp
include/defs/: defs.hpp  friend.hpp  friend_message.hpp  group.hpp  group_config.hpp  group_member.hpp  group_member_info.hpp  group_message.hpp  message_chain.hpp  message_interface.hpp  qq_types.hpp  serializable.hpp  temp_message.hpp
include/defs/messages/: AppMessage.hpp  AtAllMessage.hpp  AtMessage.hpp  FaceMessage.hpp  FlashImageMessage.hpp  ImageMessage.hpp  JsonMessage.hpp  PlainMessage.hpp  PokeMessage.hpp  QuoteMessage.hpp  XmlMessage.hpp
include/events/: bot_invited_join_group_request_event.hpp  bot_join_group.hpp  bot_leave_active.hpp  bot_leave_kick.hpp  bot_mute_event.hpp  bot_offline_active.hpp  bot_offline_dropped.hpp  bot_offline_force.hpp  bot_online_event.hpp  bot_relogin_event.hpp  bot_unmute_event.hpp  event_interface.hpp  event_processer.hpp  events.hpp  events_name.hpp  friend_message.hpp  friend_recall_event.hpp  group_message.hpp  group_mute_all_event.hpp  group_name_change.hpp  group_recall_event.hpp  join_request_event.hpp  member_join_event.hpp  member_join_request_event.hpp  member_leave_kick.hpp  member_leave_quit.hpp  member_mute_event.hpp  member_unmute_event.hpp  message_event.hpp  mirai_event.hpp  new_friend_event.hpp  temp_message.hpp
include/mirai/: MiraiBot.hpp  Property.hpp  SessionOptions.hpp  exported.h  mirai.h  mirai_bot.hpp
include/mirai/defs/: FileDownloadInfo.hpp  Friend.hpp  Group.hpp  GroupAnnouncement.hpp  GroupConfig.hpp  GroupFile.hpp  GroupMember.hpp  IMessage.hpp  ISerializable.hpp  MessageChain.hpp  MusicShareKind.hpp  QQType.hpp  defs.hpp  friend.hpp  group.hpp  group_config.hpp  group_file.hpp  group_file_info.hpp  group_member.hpp  group_member_info.hpp  message_chain.hpp  message_interface.hpp  profile.hpp  qq_types.hpp  serializable.hpp  simple_reflect.hpp
include/mirai/defs/messages/: AppMessage.hpp  AtAllMessage.hpp  AtMessage.hpp  FaceMessage.hpp  FileMessage.hpp  FlashImageMessage.hpp  ImageMessage.hpp  JsonMessage.hpp  PlainMessage.hpp  PokeMessage.hpp  QuoteMessage.hpp  VoiceMessage.hpp  XmlMessage.hpp
include/mirai/events/: BotGroupPermissionChangeEvent.hpp  BotInvitedJoinGroupRequestEvent.hpp  BotJoinGroupEvent.hpp  BotLeaveEventActive.hpp  BotLeaveEventKick.hpp  BotMuteEvent.hpp  BotOfflineEventActive.hpp  BotOfflineEventDropped.hpp  BotOfflineEventForce.hpp  BotOnlineEvent.hpp  BotReloginEvent.hpp  BotUnmuteEvent.hpp  Command.hpp  EventBase.hpp  EventCallback.hpp  EventParsingError.hpp  FriendInputStatusChangedEvent.hpp  FriendMessage.hpp  FriendNickChangedEvent.hpp  FriendRecallEvent.hpp  FriendSyncMessage.hpp  GroupAllowAnonymousChatEvent.hpp  GroupAllowConfessTalkEvent.hpp  GroupAllowMemberInviteEvent.hpp  GroupEntranceAnnouncementChangeEvent.hpp  GroupMessage.hpp  GroupMuteAllEvent.hpp  GroupNameChangeEvent.hpp  GroupRecallEvent.hpp  GroupSyncMessage.hpp  LostConnection.hpp  MemberCardChangeEvent.hpp  MemberHonorChangeEvent.hpp  MemberJoinEvent.hpp  MemberJoinRequestEvent.hpp  MemberLeaveEventKick.hpp  MemberLeaveEventQuit.hpp  MemberMuteEvent.hpp  MemberPermissionChangeEvent.hpp  MemberSpecialTitleChangeEvent.hpp  (+44 more)
include/mirai/exceptions/: MiraiApiHttpException.hpp  NetworkException.hpp  exceptions.hpp  mirai_api_http_exception.hpp  network_exception.hpp
include/mirai/messages/: AppMessage.hpp  AtAllMessage.hpp  AtMessage.hpp  DiceMessage.hpp  FaceMessage.hpp  FileMessage.hpp  FlashImageMessage.hpp  ForwardMessage.hpp  ImageMessage.hpp  JsonMessage.hpp  MarketFaceMessage.hpp  MiraiCode.hpp  MusicShare.hpp  PlainMessage.hpp  PokeMessage.hpp  QuoteMessage.hpp  VoiceMessage.hpp  XmlMessage.hpp  messages.hpp
mirai-third-party/: easywsclient.cpp  easywsclient.hpp
src/: EventHelperFunctions.cpp  MemberHonorChangeEvent.cpp  MessageChain.cpp  MiraiBot.cpp  MiraiEvent.cpp  MusicShareKind.cpp  SessionOptions.cpp  event_func.cpp  event_func.hpp  message_chain.cpp  mirai_bot.cpp  mirai_event.cpp
